--- a/src/web/dialog.html
+++ b/src/web/dialog.html
@@ -3,35 +3,35 @@
 <head>
     <title>Confirmation</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"> -->
+    <script type="module" src="https://unpkg.com/@fluentui/web-components"></script>
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"  crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" type="application/javascript" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="dialog.js" type="application/javascript"></script>
-    </script>
+    <script src="dialog.css" type="stylesheet"></script>
+    <link rel="stylesheet" href="dialog.css">
 </head>
 <body>
-    <div class="container">
-        <div class="card mt-3">
-            <div class="card-header">
-                登録済みドメインのメールアドレス
+    <div id="myCardContainer" style="margin-left: 20px; margin-right: 20px;">
+        <fluent-card>
+            <h3>登録済みドメインのメールアドレス</h3>
+            <fluent-divider></fluent-divider>
+            <div id="trusted-domains">
             </div>
-            <div class="card-body" id="trusted-domains"></div>
-        </div>
-        <div class="card mt-3">
-            <div class="card-header">
-                外部ドメインのメールアドレス
-            </div>
-            <div class="card-body" id="untrusted-domains"></div>
-        </div>
-        <div class="card mt-3 mb-3">
-            <div class="card-header">
-                添付ファイル/その他の警告
-            </div>
-            <div class="card-body" id="attachment-files"></div>
-        </div>
-        <button type="button" class="btn btn-primary" id="ok-button" onclick="onOk()" disabled>OK</button>
-        <button type="button" class="btn btn-light" id="cancel-button" onclick="onCancel()">Cancel</button>
+        </fluent-card>
+        <fluent-card>
+            <h3>外部ドメインのメールアドレス</h3>
+            <fluent-divider></fluent-divider>
+            <div id="untrusted-domains"></div>
+        </fluent-card>
+        <fluent-card>
+            <h3>添付ファイル/その他の警告</h3>
+            <fluent-divider></fluent-divider>
+            <div id="attachment-and-others"></div>
+        </fluent-card>
+        <fluent-button id="ok-button" appearance="accent" onclick="onOk()" disabled>OK</fluent-button>
+        <fluent-button id="cancel-button" onclick="onCancel()">Cancel</button>
     </div>
 </body>
 </html>
