--- a/src/web/dialog.html
+++ b/src/web/dialog.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="dialog.css">
 </head>
 <body>
-    <div id="myCardContainer" style="margin-left: 20px; margin-right: 20px;">
+    <div id="my-card-container" style="margin-left: 20px; margin-right: 20px;">
         <fluent-card>
             <div class="heading-container">
                 <h3>登録済みドメインのメールアドレス</h3><fluent-button onclick="onCheckAllTrusted()">全てチェック</fluent-button>
