--- a/src/web/dialog.html
+++ b/src/web/dialog.html
@@ -13,10 +13,10 @@
     <link rel="stylesheet" href="dialog.css">
 </head>
 <body>
-    <div id="my-card-container" style="margin-left: 20px; margin-right: 20px;">
+    <div class="card-container">
         <fluent-card>
             <div class="heading-container">
-                <h3>登録済みドメインのメールアドレス</h3><fluent-button onclick="onCheckAllTrusted()">全てチェック</fluent-button>
+                <h3>登録済みドメインのメールアドレス</h3><fluent-button onclick="onCheckAllTrusted()">一括チェック</fluent-button>
             </div>
             <fluent-divider></fluent-divider>
             <div id="trusted-domains">
