--- a/src/web/dialog.html
+++ b/src/web/dialog.html
@@ -4,13 +4,12 @@
     <title>Confirmation</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"> -->
-    <script type="module" src="https://unpkg.com/@fluentui/web-components"></script>
+    <script src="https://unpkg.com/@fluentui/web-components" type="module"></script>
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"  crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" type="application/javascript" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="dialog.js" type="application/javascript"></script>
-    <script src="dialog.css" type="stylesheet"></script>
-    <link rel="stylesheet" href="dialog.css">
+    <link href="dialog.css" rel="stylesheet">
 </head>
 <body>
     <div class="card-container">
