--- a/src/web/dialog.html
+++ b/src/web/dialog.html
@@ -8,7 +8,9 @@
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"  crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" type="application/javascript" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="dialog.js" type="application/javascript"></script>
+    <script src="recipient-parser.mjs" type="module"></script>
+    <script src="recipient-classifier.mjs" type="module"></script>
+    <script src="dialog.js" type="module"></script>
     <link href="dialog.css" rel="stylesheet">
 </head>
 <body>
