--- a/src/web/dialog.html
+++ b/src/web/dialog.html
@@ -21,7 +21,7 @@
         <fluent-card>
             <h3>外部ドメインのメールアドレス</h3>
             <fluent-divider></fluent-divider>
-            <div id="untrusted-domains"></div>
+            <div id="external-domains"></div>
         </fluent-card>
         <fluent-card>
             <h3>添付ファイル/その他の警告</h3>
