--- a/src/web/count-down.html
+++ b/src/web/count-down.html
@@ -14,7 +14,7 @@
             <p><span id="count"></span>秒後に送信します</p>
         </fluent-card>
         <div class="button-container">
-            <fluent-button id="send-button" onclick="onSend()" disabled>今すぐ送信</fluent-button>
+            <fluent-button id="send-button" onclick="onSend()">今すぐ送信</fluent-button>
             <fluent-button id="cancel-button" onclick="onCancel()">キャンセル</fluent-button>
         </div>
     </div>
