Hide count down message until the dialog is initialized

--- a/src/web/count-down.html
+++ b/src/web/count-down.html
@@ -11,7 +11,7 @@
 <body>
     <div class="card-container">
         <fluent-card>
-            <p><span id="count"></span>秒後に送信します</p>
+            <p id="message" hidden><span id="count"></span>秒後に送信します</p>
         </fluent-card>
         <div class="button-container">
             <fluent-button id="send-button" onclick="onSend()">今すぐ送信</fluent-button>
