Define dialog message in HTML form

--- a/src/web/dialog.html
+++ b/src/web/dialog.html
@@ -37,10 +37,9 @@
         <h2>CAUTION!</h2>
         <div class="newly-added-domain-container">
             <fluent-card id="newly-added-domains-card" class="newly-added-domain-content">
-                返信元のメールの宛先に含まれていなかったドメインの以下の宛先が追加されています。<br/><br/>
-                <div id="newly-added-domain-address-list">
-                </div>
-                <br/>送信してよろしいですか？
+                <p>返信元のメールの宛先に含まれていなかったドメインの以下の宛先が追加されています。</p>
+                <ul id="newly-added-domain-address-list"></ul>
+                <p>送信してよろしいですか？</p>
             </fluent-card>
             <div class="new-domain-button-container">
                 <fluent-button id="send-new-domain-button" onclick="onSendNewDomain()">送信</fluent-button>
