--- a/src/web/app.html
+++ b/src/web/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 <head>
     <title>No title</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
