--- a/src/web/count-down.html
+++ b/src/web/count-down.html
@@ -6,16 +6,19 @@
     <script src="https://unpkg.com/@fluentui/web-components" type="module"></script>
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"  crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <link href="dialog.css" rel="stylesheet">
     <link href="count-down.css" rel="stylesheet">
 </head>
 <body>
     <div class="card-container">
-        <fluent-card>
-            <p id="message" hidden>
-              <span data-l10n-text-content="countDown_messageBefore"></span>
-              <span id="count"></span>
-              <span data-l10n-text-content="countDown_messageAfter"></span></p>
-        </fluent-card>
+        <div class="cards">
+            <fluent-card>
+                <p id="message" hidden>
+                  <span data-l10n-text-content="countDown_messageBefore"></span>
+                  <span id="count"></span>
+                  <span data-l10n-text-content="countDown_messageAfter"></span></p>
+            </fluent-card>
+        </div>
         <div class="button-container">
             <fluent-button id="send-button" onclick="onSend()"
                            data-l10n-text-content="countDown_sendButtonLabel"></fluent-button>
