--- a/src/web/count-down.html
+++ b/src/web/count-down.html
@@ -3,9 +3,9 @@
 <head>
     <title>Confirmation</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <script src="https://unpkg.com/@fluentui/web-components" type="module"></script>
-    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"  crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="lib/fluentui/web-components/web-components.min.js" type="module"></script>
+    <script src="lib/office-js/office.js" type="text/javascript"></script>
+    <script src="lib/jquery/jquery.min.js" type="text/javascript"></script>
     <link href="dialog.css" rel="stylesheet">
     <link href="count-down.css" rel="stylesheet">
 </head>
