--- a/src/web/setting.html
+++ b/src/web/setting.html
@@ -1,12 +1,14 @@
 <!-- Copyright (c) Microsoft Corporation. All rights reserved. Licensed under the MIT License. -->
 <!DOCTYPE html>
 <html>
+
 <head>
     <script src="lib/fluentui/web-components/web-components.min.js" type="module"></script>
     <script src="lib/office-js/office.js" type="text/javascript"></script>
     <link href="dialog.css" rel="stylesheet">
     <link href="setting.css" rel="stylesheet">
 </head>
+
 <body class="dialog-body">
     <div class="dialog-content">
         <fluent-tabs activeid="entrees">
@@ -16,13 +18,26 @@
             <fluent-tab id="unsafeFiles">注意が必要なファイル名</fluent-tab>
             <fluent-tab id="about">このアドオンについて</fluent-tab>
             <fluent-tab-panel id="generalSettingPanel">
-                <fluent-checkbox id="countEnabled">メール送信前のカウントダウンを有効化する</fluent-checkbox><br />
-                <fluent-checkbox id="countAllowSkip">カウントダイアログの「いますぐ送信ボタン」を有効化する</fluent-checkbox><br />
-                送信までのカウントダウン秒数: <fluent-text-field id="countSeconds"></fluent-text-field> 秒 <br />
-                <fluent-checkbox id="safeBccEnabled">To/Ccに一定数以上のドメインが含まれている場合に警告する</fluent-checkbox><br />
-                警告対象となるドメインの数: <fluent-text-field id="safeBccThreshold"></fluent-text-field> 件以上 <br />
-                <fluent-checkbox id="safeNewDomainsEnabled">返信の宛先に今まで含まれていなかったドメインのアドレスが追加された場合に警告する</fluent-checkbox><br />
-                <fluent-checkbox id="mainSkipIfNoExt">宛先が社内ドメインのみの場合は確認をスキップする</fluent-checkbox>
+                <fluent-card class="top-card">
+                    <strong>送信カウントダウン設定</strong>
+                    <fluent-divider></fluent-divider>
+                    <fluent-checkbox id="countEnabled">メール送信前のカウントダウンを有効化する</fluent-checkbox><br />
+                    <fluent-checkbox id="countAllowSkip">カウントダイアログの「いますぐ送信ボタン」を有効化する</fluent-checkbox><br />
+                    <fluent-number-field id="countSeconds">送信までのカウントダウン秒数: </fluent-number-field>
+                </fluent-card>
+                <fluent-card>
+                    <strong>警告設定</strong>
+                    <fluent-divider></fluent-divider>
+                    <fluent-checkbox id="safeBccEnabled">To/Ccに一定数以上のドメインが含まれている場合に警告する</fluent-checkbox><br />
+                    <fluent-number-field id="safeBccThreshold">警告対象となるドメインの数:</fluent-number-field><br />
+                    <fluent-checkbox
+                        id="safeNewDomainsEnabled">返信の宛先に今まで含まれていなかったドメインのアドレスが追加された場合に警告する</fluent-checkbox><br />
+                </fluent-card>
+                <fluent-card>
+                    <strong>その他の設定</strong>
+                    <fluent-divider></fluent-divider>
+                    <fluent-checkbox id="mainSkipIfNoExt">宛先が社内ドメインのみの場合は確認をスキップする</fluent-checkbox>
+                </fluent-card>
             </fluent-tab-panel>
             <fluent-tab-panel id="trustedDomainsPanel">
                 <fluent-text-area id="trustedDomainsTextArea"></fluent-text-area>
@@ -34,7 +49,7 @@
                 <fluent-text-area id="unsafeFilesTextArea"></fluent-text-area>
             </fluent-tab-panel>
             <fluent-tab-panel id="aboutPanel">
-                FlexConfirmMail
+                <h3>FlexConfirmMail</h3>
                 2025 ClearCode Inc. All rights reserved.
             </fluent-tab-panel>
         </fluent-tabs>
@@ -46,4 +61,5 @@
         </div>
     </div>
 </body>
+
 </html>
