Implement logics for merge configs and reset user config

--- a/src/web/setting.html
+++ b/src/web/setting.html
@@ -56,6 +56,7 @@
     </div>
     <div class="dialog-footer">
         <div class="button-container">
+            <fluent-button id="reset-button" onclick="onReset()" data-l10n-text-content="setting_resetSetting"></fluent-button>
             <fluent-button id="save-button" onclick="onSave()" data-l10n-text-content="setting_saveAndQuit"></fluent-button>
             <fluent-button id="cancel-button" onclick="onCancel()" data-l10n-text-content="setting_cancel"></fluent-button>
         </div>
