Add support for delay delivery time
DelayDeliveryEnabled and DelayDeliverySeconds are added.

--- a/src/web/setting.html
+++ b/src/web/setting.html
@@ -26,6 +26,12 @@
                     <fluent-number-field id="countSeconds" data-l10n-text-content="setting_configCountSeconds"></fluent-number-field>
                 </fluent-card>
                 <fluent-card>
+                    <strong data-l10n-text-content="setting_configDelayDeliveryTime"></strong>
+                    <fluent-divider></fluent-divider>
+                    <fluent-checkbox id="delayDeliveryEnabled" data-l10n-text-content="setting_delayDeliveryEnabled"></fluent-checkbox><br />
+                    <fluent-number-field id="delayDeliverySeconds" data-l10n-text-content="setting_delayDeliverySeconds"></fluent-number-field>
+                </fluent-card>
+                <fluent-card>
                     <strong data-l10n-text-content="setting_configWarning"></strong>
                     <fluent-divider></fluent-divider>
                     <fluent-checkbox id="safeBccEnabled" data-l10n-text-content="setting_configSafeBccEnabled"></fluent-checkbox><br />
