--- a/src/web/confirm.html
+++ b/src/web/confirm.html
@@ -9,7 +9,7 @@
     <link href="dialog.css" rel="stylesheet">
     <link href="confirm.css" rel="stylesheet">
 </head>
-<body>
+<body class="dialog-body">
     <div class="card-container">
         <div class="cards">
             <fluent-card>
