Disable the "check all trusted domains" button if there is no trusted domain

--- a/src/web/confirm.html
+++ b/src/web/confirm.html
@@ -18,7 +18,7 @@
                 <fluent-card>
                     <div class="heading-container">
                         <h3 data-l10n-text-content="confirmation_trustedCaption"></h3>
-                        <fluent-button onclick="onCheckAllTrusted()"
+                        <fluent-button id="check-all-trusted" onclick="onCheckAllTrusted()"
                             data-l10n-text-content="confirmation_trustedCheckAllButtonLabel"></fluent-button>
                     </div>
                     <fluent-divider></fluent-divider>
