add confing to switch appointment support

--- a/src/web/confirm.html
+++ b/src/web/confirm.html
@@ -57,7 +57,7 @@ Copyright (c) 2025 ClearCode Inc.
         <h2 data-l10n-text-content="newlyAddedDomainReconfirmation_caption"></h2>
         <div class="newly-added-domain-container">
             <fluent-card id="newly-added-domains-card" class="newly-added-domain-content">
-                <p data-l10n-text-content="newlyAddedDomainReconfirmation_messageBefore"></p>
+                <p id="newly-added-domains-message-before"></p>
                 <ul id="newly-added-domain-address-list"></ul>
                 <p data-l10n-text-content="newlyAddedDomainReconfirmation_messageAfter"></p>
             </fluent-card>
