--- a/src/web-fallback/app.html
+++ b/src/web-fallback/app.html
@@ -3,7 +3,7 @@
 <head>
     <title>No title</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <script src="lib/office-js/office.js" type="text/javascript"></script>
+    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
 </head>
 <body>
 </body>
