--- a/src/web/count-down.html
+++ b/src/web/count-down.html
@@ -12,7 +12,7 @@ Copyright (c) 2025 ClearCode Inc.
     <title>Confirmation</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <script src="lib/fluentui/web-components/web-components.min.js" type="module"></script>
-    <script src="lib/office-js/office.js" type="text/javascript"></script>
+    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
     <link href="dialog.css" rel="stylesheet">
     <link href="count-down.css" rel="stylesheet">
 </head>
