--- a/src/web/setting.html
+++ b/src/web/setting.html
@@ -10,7 +10,7 @@ Copyright (c) 2025 ClearCode Inc.
 
 <head>
     <script src="lib/fluentui/web-components/web-components.min.js" type="module"></script>
-    <script src="lib/office-js/office.js" type="text/javascript"></script>
+    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
     <link href="dialog.css" rel="stylesheet">
     <link href="setting.css" rel="stylesheet">
 </head>
