--- a/src/web/setting.html
+++ b/src/web/setting.html
@@ -49,6 +49,8 @@ Copyright (c) 2025 ClearCode Inc.
                 <fluent-card>
                     <strong data-l10n-text-content="setting_configMisc"></strong>
                     <fluent-divider></fluent-divider>
+                    <fluent-checkbox id="requireCheckSubject" data-l10n-text-content="setting_requireCheckSubject"></fluent-checkbox><br />
+                    <fluent-checkbox id="requireCheckBody" data-l10n-text-content="setting_requireCheckBody"></fluent-checkbox><br />
                     <fluent-checkbox id="mainSkipIfNoExt" data-l10n-text-content="setting_configMainSkipIfNoExt"></fluent-checkbox><br />
                     <fluent-checkbox id="AppointmentConfirmationEnabled" data-l10n-text-content="setting_configAppointmentConfirmationEnabled"></fluent-checkbox>
                 </fluent-card>
