--- a/src/web/prohibit.html
+++ b/src/web/prohibit.html
@@ -14,14 +14,14 @@ Copyright (c) 2025 ClearCode Inc.
     <script src="lib/fluentui/web-components/web-components.min.js" type="module"></script>
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
     <link href="dialog.css" rel="stylesheet">
-    <link href="forbid-to-send.css" rel="stylesheet">
+    <link href="prohibit.css" rel="stylesheet">
 </head>
 
 <body id="dialog-body" class="dialog-body" hidden>
     <div class="dialog-content">
-        <p id="forbidden-message-before"></p>
-        <ul id="forbidden-list"></ul>
-        <p id="forbidden-message-after"></p>
+        <p id="prohibited-message-before"></p>
+        <ul id="prohibited-list"></ul>
+        <p id="prohibited-message-after"></p>
     </div>
     <div class="dialog-footer">
         <div class="button-container">
