--- a/src/web/prohibit.html
+++ b/src/web/prohibit.html
@@ -9,7 +9,7 @@ Copyright (c) 2025 ClearCode Inc.
 <html>
 
 <head>
-    <title>Warning</title>
+    <title>Prohibit sending</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <script src="lib/fluentui/web-components/web-components.min.js" type="module"></script>
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
@@ -19,9 +19,9 @@ Copyright (c) 2025 ClearCode Inc.
 
 <body id="dialog-body" class="dialog-body" hidden>
     <div class="dialog-content">
-        <p id="prohibited-message-before"></p>
+        <p id="prohibition-message-before"></p>
         <ul id="prohibited-list"></ul>
-        <p id="prohibited-message-after"></p>
+        <p id="prohibition-message-after"></p>
     </div>
     <div class="dialog-footer">
         <div class="button-container">
