--- a/src/web/block.html
+++ b/src/web/block.html
@@ -9,19 +9,19 @@ Copyright (c) 2025 ClearCode Inc.
 <html>
 
 <head>
-    <title>Prohibit sending</title>
+    <title>Block to send</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <script src="lib/fluentui/web-components/web-components.min.js" type="module"></script>
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
     <link href="dialog.css" rel="stylesheet">
-    <link href="prohibit.css" rel="stylesheet">
+    <link href="block.css" rel="stylesheet">
 </head>
 
 <body id="dialog-body" class="dialog-body" hidden>
     <div class="dialog-content">
-        <p id="prohibition-message-before"></p>
-        <ul id="prohibited-list"></ul>
-        <p id="prohibition-message-after"></p>
+        <p id="block-message-before"></p>
+        <ul id="block-list"></ul>
+        <p id="block-message-after"></p>
     </div>
     <div class="dialog-footer">
         <div class="button-container">
