Add a new param "SafeBccReconfirmationThreshold"

--- a/src/web/setting.html
+++ b/src/web/setting.html
@@ -42,6 +42,7 @@ Copyright (c) 2025 ClearCode Inc.
                     <fluent-divider></fluent-divider>
                     <fluent-checkbox id="safeBccEnabled" data-l10n-text-content="setting_configSafeBccEnabled"></fluent-checkbox><br />
                     <fluent-number-field id="safeBccThreshold" data-l10n-text-content="setting_configSafeBccThreshold"></fluent-number-field><br />
+                    <fluent-number-field id="safeBccReconfirmationThreshold" data-l10n-text-content="setting_configSafeBccReconfirmationThreshold"></fluent-number-field><br />
                     <fluent-checkbox
                         id="safeNewDomainsEnabled" data-l10n-text-content="setting_configSafeNewDomainsEnabled"></fluent-checkbox><br />
                 </fluent-card>
