--- a/src/web/confirm.html
+++ b/src/web/confirm.html
@@ -49,7 +49,7 @@ Copyright (c) 2025 ClearCode Inc.
                          <h3 data-l10n-text-content="confirmation_bodyCaption"></h3>
                     </fluent-checkbox>
                     <fluent-divider></fluent-divider>
-                    <div id="mail-body"></div>
+                    <pre id="mail-body"></pre>
                 </fluent-card>
                 <fluent-card>
                     <h3 data-l10n-text-content="confirmation_miscCaption"></h3>
