--- a/src/web/convert-to-bcc.html
+++ b/src/web/convert-to-bcc.html
@@ -19,7 +19,7 @@ Copyright (c) 2025 ClearCode Inc.
 
 <body id="dialog-body" class="dialog-body" hidden>
     <div class="dialog-content">
-        <p id="convertBcc-description"></p>
+        <p id="convertToBcc-description"></p>
         <p data-l10n-text-content="convertToBcc_confirmation"></p>
     </div>
     <div class="dialog-footer">
