Implement setting dialog sample

--- a/src/web/setting.html
+++ b/src/web/setting.html
@@ -22,6 +22,7 @@ Copyright (c) 2025 ClearCode Inc.
             <fluent-tab id="trustedDomains" data-l10n-text-content="setting_configTrustedDomains"></fluent-tab>
             <fluent-tab id="unsafeDomains" data-l10n-text-content="setting_configUnsafeDomains"></fluent-tab>
             <fluent-tab id="unsafeFiles" data-l10n-text-content="setting_configUnsafeFiles"></fluent-tab>
+            <fluent-tab id="unsafeBodies" data-l10n-text-content="setting_configUnsafeBodies"></fluent-tab>
             <fluent-tab id="about" data-l10n-text-content="setting_aboutAddon"></fluent-tab>
             <fluent-tab-panel id="generalSettingPanel">
                 <fluent-card class="top-card">
@@ -63,6 +64,9 @@ Copyright (c) 2025 ClearCode Inc.
             </fluent-tab-panel>
             <fluent-tab-panel id="unsafeFilesPanel">
                 <fluent-text-area id="unsafeFilesTextArea"></fluent-text-area>
+            </fluent-tab-panel>
+            <fluent-tab-panel id="unsafeBodiesPanel">
+                <fluent-text-area id="unsafeBodiesTextArea"></fluent-text-area>
             </fluent-tab-panel>
             <fluent-tab-panel id="aboutPanel">
                 <h3>FlexConfirmMail</h3>
