Add UntrustUnsafeRecipients parameter
UntrustUnsafeRecipients is added to the common config.
If UntrustUnsafeRecipients is true, addresses matched to
unsafe patterns are regarded as targeting external domain/address.

A checkbox to specify UntrustUnsafeRecipients by GUI is added to
the unsafe patterns page because it affects to unsafe patterns
behavior.

--- a/src/web/setting.html
+++ b/src/web/setting.html
@@ -62,7 +62,8 @@ Copyright (c) 2025 ClearCode Inc.
                 <fluent-text-area id="trustedDomainsTextArea"></fluent-text-area>
             </fluent-tab-panel>
             <fluent-tab-panel id="unsafeDomainsPanel">
-                <fluent-text-area id="unsafeDomainsTextArea"></fluent-text-area>
+                <fluent-text-area id="unsafeDomainsTextArea"></fluent-text-area><br/><br/>
+                <fluent-checkbox id="untrustUnsafeRecipients" data-l10n-text-content="setting_configUntrustUnsafeRecipients"></fluent-checkbox>
             </fluent-tab-panel>
             <fluent-tab-panel id="unsafeFilesPanel">
                 <fluent-text-area id="unsafeFilesTextArea"></fluent-text-area>
