Add CountSkipIfNoExt parameter
If CountSkipIfNoExt and MainSkipIfNoExt are specified,
when there is no external addresses, FCM skips not only
the confirmation dialog but also the countdown dialog.

--- a/src/web/setting.html
+++ b/src/web/setting.html
@@ -55,6 +55,7 @@ Copyright (c) 2025 ClearCode Inc.
                     <fluent-checkbox id="requireCheckSubject" data-l10n-text-content="setting_requireCheckSubject"></fluent-checkbox><br />
                     <fluent-checkbox id="requireCheckBody" data-l10n-text-content="setting_requireCheckBody"></fluent-checkbox><br />
                     <fluent-checkbox id="mainSkipIfNoExt" data-l10n-text-content="setting_configMainSkipIfNoExt"></fluent-checkbox><br />
+                    <fluent-checkbox id="countSkipIfNoExt" data-l10n-text-content="setting_configCountSkipIfNoExt"></fluent-checkbox><br />
                     <fluent-checkbox id="AppointmentConfirmationEnabled" data-l10n-text-content="setting_configAppointmentConfirmationEnabled"></fluent-checkbox>
                 </fluent-card>
             </fluent-tab-panel>
