--- a/src/web/setting.html
+++ b/src/web/setting.html
@@ -56,7 +56,8 @@ Copyright (c) 2025 ClearCode Inc.
                     <fluent-checkbox id="requireCheckBody" data-l10n-text-content="setting_requireCheckBody"></fluent-checkbox><br />
                     <fluent-checkbox id="mainSkipIfNoExt" data-l10n-text-content="setting_configMainSkipIfNoExt"></fluent-checkbox><br />
                     <fluent-checkbox id="countSkipIfNoExt" data-l10n-text-content="setting_configCountSkipIfNoExt"></fluent-checkbox><br />
-                    <fluent-checkbox id="AppointmentConfirmationEnabled" data-l10n-text-content="setting_configAppointmentConfirmationEnabled"></fluent-checkbox>
+                    <fluent-checkbox id="AppointmentConfirmationEnabled" data-l10n-text-content="setting_configAppointmentConfirmationEnabled"></fluent-checkbox><br />
+                    <fluent-checkbox id="blockDistributionLists" data-l10n-text-content="setting_configBlockDistributionLists"></fluent-checkbox>
                 </fluent-card>
             </fluent-tab-panel>
             <fluent-tab-panel id="trustedDomainsPanel">
