--- a/src/web/setting.html
+++ b/src/web/setting.html
@@ -58,6 +58,7 @@ Copyright (c) 2025 ClearCode Inc.
                     <fluent-checkbox id="countSkipIfNoExt" data-l10n-text-content="setting_configCountSkipIfNoExt"></fluent-checkbox><br />
                     <fluent-checkbox id="AppointmentConfirmationEnabled" data-l10n-text-content="setting_configAppointmentConfirmationEnabled"></fluent-checkbox><br />
                     <fluent-checkbox id="blockDistributionLists" data-l10n-text-content="setting_configBlockDistributionLists"></fluent-checkbox>
+                    <fluent-checkbox id="emphasizeUntrustedToCc" data-l10n-text-content="setting_configEmphasizeUntrustedToCc"></fluent-checkbox>
                 </fluent-card>
             </fluent-tab-panel>
             <fluent-tab-panel id="trustedDomainsPanel">
